[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pygear"
version = "0.1.0"
description = "Sega Game Gear emulator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
gui = ["pygame>=2.0"]

[tool.setuptools.packages.find]
include = ["pygear*"]
